<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="question_ocean">The Pacific Ocean is larger than the Atlantic Ocean?</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean?</string>
    <string name="question_africa">The source of the Nile River is in Egypt?</string>
    <string name="question_american">The Amazon River is the longest river in Americans?</string>
    <string name="question_asia">Lake Bakal is the world\'s oldest and deepest freshwater lake?</string>
    <string name="buttonYes">YES</string>
    <string name="buttonNo">NO</string>
    <string name="toastCorrect">Correct!</string>
    <string name="toastIncorrect">Incorrect!</string>
    <string name="image_button_description_forward">NEXT</string>
    <string name="image_button_description_back">BACK</string>
    <string name="title_activity_cheat">You are cheating!</string>
    <string name="textview_cheat_warning">Cheating is wrong! You really want to do this?</string>
    <string name="toast_cheat">Cheating is wrong!</string>
    <string name="button_show_answer">Show Answer</string>
    <string name="button_go_back">BACK</string>

</resources>
