<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView 
        android:id="@+id/textView_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp" />
    
    <Button 
        android:id="@+id/button_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="40dp" 
        android:background="#cff"
        android:text="@string/buttonYes" />
    
    <Button 
        android:id="@+id/button_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:background="#cff"
        android:text="@string/buttonNo" />

    <ImageButton
        android:id="@+id/image_button_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_question"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="#cff"
        android:contentDescription="@string/image_button_description_back"
        android:src="@drawable/ic_action_back" />

    <ImageButton
        android:id="@+id/image_button_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView_question"
        android:layout_alignTop="@+id/image_button_backward"
        android:background="#cff"
        android:contentDescription="@string/image_button_description_forward"
        android:src="@drawable/ic_action_forward" />
   
    <Button 
        android:id="@+id/button_show_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#cff"
        android:text="@string/button_show_answer"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/image_button_backward" />

</RelativeLayout>
